--- a/genmedhtml-100/Genmed HTML5/about.html
+++ b/genmedhtml-100/Genmed HTML5/about.html
@@ -111,7 +111,7 @@
                         <img src="assets/images/title-icon.png" class="mb-xl-20" alt="img">
                         <div class="section-description">
                             <p class="text-light-white">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                                FarmaSuarez nace con la idea de brindarte el mejor servicio, personalizado y de calidad, nos preocupamos por tu salud y tú eres nuestra prioridad #1
                             </p>
                         </div>
                     </div>
@@ -129,8 +129,8 @@
                                 <i class="flaticon-medical"></i>
                             </div>
                             <div class="counter">
-                                <span class="count text-custom-white">800</span>
-                                <span class="fs-16 text-custom-white">Satisfied Patients</span>
+                                <span class="count text-custom-white">100</span>
+                                <span class="fs-16 text-custom-white">Pacientes satisfechos</span>
                             </div>
                         </div>
                     </div>
@@ -140,19 +140,8 @@
                                 <i class="flaticon-doctor"></i>
                             </div>
                             <div class="counter">
-                                <span class="count text-custom-white">350</span>
-                                <span class="fs-16 text-custom-white">Certified Doctor</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="counter-box mb-xs-40">
-                            <div class="counter-icon">
-                                <i class="flaticon-award"></i>
-                            </div>
-                            <div class="counter">
-                                <span class="count text-custom-white">250</span>
-                                <span class="fs-16 text-custom-white">Winning Awards</span>
+                                <span class="count text-custom-white">5</span>
+                                <span class="fs-16 text-custom-white">Doctores capacitados</span>
                             </div>
                         </div>
                     </div>
@@ -162,8 +151,8 @@
                                 <i class="flaticon-balloons"></i>
                             </div>
                             <div class="counter">
-                                <span class="count text-custom-white">25</span>
-                                <span class="fs-16 text-custom-white">Years Experience</span>
+                                <span class="count text-custom-white">10</span>
+                                <span class="fs-16 text-custom-white">Años cuidando de ti</span>
                             </div>
                         </div>
                     </div>
@@ -179,7 +168,7 @@
                         <img src="assets/images/title-icon.png" class="mb-xl-20" alt="img">
                         <div class="section-description">
                             <p class="text-light-white">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+                                Nuestros doctores estan capacitados para darte la mejor atención posible, cuidando tu salud y comprometidos con ayudarte
                             </p>
                         </div>
                     </div>
@@ -284,18 +273,7 @@
                             <p class="text-custom-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="newsletter-form-wrapper">
-                            <form>
-                                <div class="input-group">
-                                    <input type="email" name="#" class="form-control form-control-custom" placeholder="Email Id">
-                                    <div class="input-group-append">
-                                        <button type="submit">Subscribe</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </section>
@@ -318,18 +296,18 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-info mb-md-40">
-                            <h5 class="text-custom-black fw-600">Working Time</h5>
+                            <h5 class="text-custom-black fw-600">Horario de atención</h5>
                             <p class="no-margin text-custom-black fs-14">
-                                Mon - Wed: <span class="text-custom-black fw-600">9:00 AM - 7:00 PM</span><br>
-                                Thursday: <span class="text-custom-black fw-600">9:00 AM - 6:30 PM</span><br>
-                                Friday: <span class="text-custom-black fw-600">9:00 AM - 6:00 PM</span><br>
-                                Sat - Sun: <span class="text-custom-black fw-600">Closed</span>
+                                Lunes - Mier: <span class="text-custom-black fw-600">7:00 AM - 23:00 PM</span><br>
+                                Jueves: <span class="text-custom-black fw-600">8:30 AM - 23:30 PM</span><br>
+                                Viernes: <span class="text-custom-black fw-600">9:00 AM - 22:00 PM</span><br>
+                                Sáb - Dom: <span class="text-custom-black fw-600">9:00 AM - 22:00 PM</span>
                             </p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-info mb-sm-40">
-                            <h5 class="text-custom-black fw-600">Emergency Cases</h5>
+                            <h5 class="text-custom-black fw-600">Número de emergencia</h5>
                             <h4 class="text-light-blue fw-600">1-800-123-4567</h4>
                             <p class="no-margin text-custom-black fs-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             </p>
@@ -337,11 +315,11 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-info">
-                            <h5 class="text-custom-black fw-600">Our Location</h5>
+                            <h5 class="text-custom-black fw-600">Nuestra Ubicacion</h5>
                             <p class="text-custom-black fs-14">9000 Regency Parkway,<br>Suite 400 Cary</p>
                             <p class="no-margin text-custom-black fs-14">
-                                Email: <a href="#" class="text-custom-black fw-600">info@domain.com</a><br>
-                                Phone: <a href="#" class="text-custom-black fw-600">+(347) 123 456 7890</a>
+                                Correo: <a href="#" class="text-custom-black fw-600">info@domain.com</a><br>
+                                Teléfono: <a href="#" class="text-custom-black fw-600">+(591) 756-02784</a>
                             </p>
                         </div>
                     </div>
@@ -355,7 +333,7 @@
                 <div class="row">
                     <div class="col-md-6 align-self-center">
                         <p class="text-custom-black">
-                            © 2020 <a href="http://slidesigma.com/" class="fw-600" target="_blank">Slidesigma.</a> All Rights Reserved
+                            Desing by <a href="http://slidesigma.com/" class="fw-600" target="_blank">Quokasoft</a>
                         </p>
                     </div>
                     <div class="col-md-6">
