--- a/genmedhtml-100/Genmed HTML5/contact.html
+++ b/genmedhtml-100/Genmed HTML5/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="keywords" content="#">
     <meta name="description" content="#">
-    <title>Genmed | Contact Us</title>
+    <title>FarmaSuarez| Contactactanos</title>
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/images/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/images/favicon.ico">
@@ -105,15 +105,6 @@
                                                 <a href="contact.html" class="text-custom-white">Contactanos</a>
                                             </li>
                                         </ul>
-                                    </nav>
-                                    <div class="right-side">
-                                        <div class="cta-btn">
-                                            <a href="#" class="btn-first btn-submit">
-                                                Consigue una cita
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="hamburger-menu">
                                     <div class="menu-btn">
                                         <span></span>
@@ -141,7 +132,7 @@
                                 <h1 class="text-custom-white lh-default fw-600">Contactanos</h1>
                                 <ul class="custom">
                                     <li>
-                                        <a href="index.html" class="text-custom-white">Inico</a>
+                                        <a href="index.html" class="text-custom-white">Inicio</a>
                                     </li>
                                     <li class="text-custom-white active">Contactanos</li>
                                 </ul>
@@ -158,8 +149,8 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-4 mb-md-80">
                         <div class="contact-form full-height align-self-center bx-wrapper bg-custom-white">
-                            <h4 class="text-custom-black fw-600">Nuestra direccion</h4>
-                            <p class="text-light-white no-margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                            <h4 class="text-custom-black fw-600">Atencion médica a domicilio</h4>
+                            <p class="text-light-white no-margin">Rellena estos campos para que podamos atenderte a tu domicilio</p>
                             <form class="form-layout-1">
                                 <div class="row">
                                     <div class="col-sm-6">
@@ -178,6 +169,10 @@
                                         <div class="form-group">
                                             <label class="text-left">Correo Eléctronico</label>
                                             <input type="email" name="#" class="form-control" placeholder="Correo Eléctronico">
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="text-left">Numero teléfonico</label>
+                                            <input type="email" name="#" class="form-control" placeholder="Ingresa tu numero telefonico">
                                         </div>
                                         <div class="form-group">
                                             <label class="text-left">Mensaje</label>
@@ -208,8 +203,8 @@
                                 <div class="icon mb-xl-20">
                                     <i class="flaticon-telephone"></i>
                                 </div>
-                                <h5 class="text-custom-black fw-600">Phone</h5>
-                                <p class="text-light-white">Start working with Genmed that can provide everything</p>
+                                <h5 class="text-custom-black fw-600">Nuestro télefono</h5>
+                                <p class="text-light-white">si deseas atencion medica personalizada</p>
                                 <a href="#" class="fs-14">+(347)123 456 7890</a>
                             </div>
                         </div>
@@ -220,8 +215,8 @@
                                 <div class="icon mb-xl-20">
                                     <i class="flaticon-email"></i>
                                 </div>
-                                <h5 class="text-custom-black fw-600">Email</h5>
-                                <p class="text-light-white">Start working with Genmed that can provide everything</p>
+                                <h5 class="text-custom-black fw-600">Correo Electronico</h5>
+                                <p class="text-light-white">Envianos un correo si tienes alguna duda</p>
                                 <a href="#" class="fs-14">contact@example.com</a>
                             </div>
                         </div>
@@ -232,8 +227,8 @@
                                 <div class="icon mb-xl-20">
                                     <i class="flaticon-pin"></i>
                                 </div>
-                                <h5 class="text-custom-black fw-600">Location</h5>
-                                <p class="text-light-white">Start working with Genmed that can provide everything</p>
+                                <h5 class="text-custom-black fw-600">Ubicación</h5>
+                                <p class="text-light-white">de nuestra sucursal y como llegar hasta allí</p>
                                 <a href="#" class="fs-14">View on Google map</a>
                             </div>
                         </div>
@@ -279,25 +274,25 @@
                                     <img src="https://via.placeholder.com/152x42" class="img-fluid image-fit" alt="logo">
                                 </a>
                             </div>
-                            <p class="text-custom-black no-margin">
+                             <p class="text-custom-black no-margin">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                             </p>fa
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-info mb-md-40">
-                            <h5 class="text-custom-black fw-600">Working Time</h5>
+                            <h5 class="text-custom-black fw-600">Horario de atencion</h5>
                             <p class="no-margin text-custom-black fs-14">
-                                Mon - Wed: <span class="text-custom-black fw-600">9:00 AM - 7:00 PM</span><br>
-                                Thursday: <span class="text-custom-black fw-600">9:00 AM - 6:30 PM</span><br>
-                                Friday: <span class="text-custom-black fw-600">9:00 AM - 6:00 PM</span><br>
-                                Sat - Sun: <span class="text-custom-black fw-600">Closed</span>
+                                Lun - Miér: <span class="text-custom-black fw-600">9:00 AM - 7:00 PM</span><br>
+                                Jueves: <span class="text-custom-black fw-600">9:00 AM - 6:30 PM</span><br>
+                                Viernes: <span class="text-custom-black fw-600">9:00 AM - 6:00 PM</span><br>
+                                Sáb - Dom: <span class="text-custom-black fw-600">Closed</span>
                             </p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-info mb-sm-40">
-                            <h5 class="text-custom-black fw-600">Emergency Cases</h5>
+                            <h5 class="text-custom-black fw-600">Número de emergencia</h5>
                             <h4 class="text-light-blue fw-600">1-800-123-4567</h4>
                             <p class="no-margin text-custom-black fs-14">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                             </p>
@@ -305,7 +300,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="footer-info">
-                            <h5 class="text-custom-black fw-600">Our Location</h5>
+                            <h5 class="text-custom-black fw-600">Nuestra ubicación</h5>
                             <p class="text-custom-black fs-14">9000 Regency Parkway,<br>Suite 400 Cary</p>
                             <p class="no-margin text-custom-black fs-14">
                                 Email: <a href="#" class="text-custom-black fw-600">info@domain.com</a><br>
